# pyLattice

./: .gitignore  ABQcaeG.00.12828.exception  ABQcaeG.00.18860.exception  Beam.py  CONTRIBUTING.md  Cell.py  Cellule.py  FullLatticeSimulation.py  Geometry_Lattice.py  LICENCE.txt  Lattice.py  Main.py  Materials.py  Node.py  Point.py  README.md  Save_result.py  abaqus.py  abaqusMacros.py  fort.7  main.py  plot_result.py  pyproject.toml  pyprojetct.toml  requirements.txt  setup.py
Codes/: Beam.py  Cellule.py  FullLatticeSimulation.py  Lattice.py  Lattice_description.py  Main.py  Point.py  Save_result.py  abaqus.py  generateVariousLatticeRnd.py  plot_result.py  saveLattice.py
Mesh/: MainMeshModifier.py  Mesh.py
Preset_Lattice/: Helmet.py
Saved_Lattice/: cellHybridRelativeDensity.py
Tests/: Beam_test.py  Cell_test.py  Gradient_test.py  Lattice_test.py  Materials_test.py  Point_test.py  Utils_test.py
examples/: Main_open_saved_Lattice.py  all_entries.py  all_lattice_parameters.py  generate_lattice_mesh.py  homogenization_example.py  mesh_trimmer_example.py  saved_lattice_example.py  schur_complement_example.py  simple_BCC_plot.py  simulation_lattice.py
mesh_file/: mesh_trimmer.py
parralelisation/: CelluleParrallele.py  latticeParralale.py
preset_lattice/: 3PointBending.json  BCC_trimmed_example.json  Bone_cuted_hybrid.json  L_logo.json  all_design_parameters.json  full_entry_lattice.json  hybrid_cell.json  hybrid_cell_homogenization.json  hybrid_cell_simulation.json  optimization_beam_flexion.json  settings.py  simple_BCC.json  simulation_beam_flexion.json
(+119 files in other folders)
