[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLattice"
version = "1.1.0"
description = "Toolkit for lattice design and FE simulation"
authors = [{name="Thomas Cadart", email="thomas.cadart@utbm.fr"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.0",
    "colorama>=0.4.6",
    "joblib>=1.4.2",
    "pytest>=8.4.1",
    "gmsh>=4.14.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
simulation = [
    "dolfinx",
    "petsc4py"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
